--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 
 "criador":"Criado Por Jato v1.90.X",
 
+"text1":"Está versão desbane na hora, e funcionará durante algum tempo, seja rápido e pegue o código antes que acabe.\n\nUtilize o código que pegou no site abaixo:",
+
+"text2":"Não achou? procure até achar, coloquei essa opção pra lhe ajudar :)",
+
 "link":"https://youtu.be/73w5YAwkBbs",
 
 "link2":"https://youtube.com/channel/UC9fZAqyC2rtrAWMZ_2nrmqQ",
@@ -42,6 +46,16 @@
 
 "codigodesban":"SmF0b0g0eFZpcFBybw",
 
+"codigovip":"pq",
+
+"coderrorvip":"Texto inválido, procure no site",
+
+"linkdialogdesban":"https://www.apkprofissa.online/p/confira-as-vantagens-do-financiamento.html",
+
+"titulotrial":"87 Código Restante",
+
+"trialvip":"trial",
+
 "usuario":"Jato90k",
 
 "usermaior":"JATO90K",
@@ -50,9 +64,9 @@
 
 "textgods":"GodsTeam 2.0",
 
-"datacomprou":"15/07/2022",
+"datacomprou":"17/07/2022",
 
-"vencimento":"17/07/2022",
+"vencimento":"20/07/2022",
 
 "botaoneutrodesban":"RESGATA CÓDIGOS VIP (104 RESTANTES)",
 
