--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 "linkmeuvideo":"https://www.apkprofissa.online/p/confira-as-vantagens-do-financiamento.html",
 
-"codigodesban":"SmF0b0g0eFZpcFBybw",
+"codigodesban":"TmFsZG9Nb2RzRnJlWA",
 
 "codigovip":"pq",
 
