--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 "text2":"Não achou? procure até achar, coloquei essa opção pra lhe ajudar :)",
 
-"link":"https://youtu.be/73w5YAwkBbs",
+"link":"https://youtu.be/oMDNx43oCLw",
 
 "link2":"https://youtube.com/channel/UC9fZAqyC2rtrAWMZ_2nrmqQ",
 
