--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 "linkmeuvideo":"https://www.apkprofissa.online/p/confira-as-vantagens-do-financiamento.html",
 
-"codigodesban":"TmFsZG9Nb2RzRnJlWA",
+"codigodesban":"RmFjw6dhbE5hZGFGU1A",
 
 "codigovip":"pq",
 
