--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 "criador":"Criado Por Jato v1.90.X",
 
-"text1":"Está versão desbane na hora, e funcionará durante algum tempo, seja rápido e pegue o código antes que acabe.\n\nUtilize o código que pegou no site abaixo:",
+"text1":"Está versão desbane na hora, e funcionará durante algum tempo, seja rápido e pegue o código antes que acabe.\n\nDicas: Está em um anúncio do site, leia a página até achar.\n\nUtilize o código que pegou no site abaixo:",
 
 "text2":"Não achou? procure até achar, coloquei essa opção pra lhe ajudar :)",
 
@@ -48,11 +48,11 @@
 
 "codigovip":"pq",
 
-"coderrorvip":"Texto inválido, procure no site",
+"coderrorvip":"Texto inválido, procure no site!",
 
-"titulotrial":"87 Código Restante",
+"titulotrial":"Código vip no site",
 
-"trialvip":"trialsss",
+"trialvip":"trial",
 
 "usuario":"Jato90k",
 
@@ -66,7 +66,7 @@
 
 "vencimento":"20/07/2022",
 
-"botaoneutrodesban":"RESGATA CÓDIGOS VIP (104 RESTANTES)",
+"botaoneutrodesban":"RESGATA CÓDIGOS VIP (105 RESTANTES)",
 
 "linkdialogdesban":"https://www.apkprofissa.online/p/confira-as-vantagens-do-financiamento.html",
 
