--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 "titulotrial":"Código vip no site",
 
-"trialvip":"trial",
+"trialvip":"trialn",
 
 "usuario":"Jato90k",
 
@@ -66,7 +66,7 @@
 
 "vencimento":"20/07/2022",
 
-"botaoneutrodesban":"RESGATA CÓDIGOS VIP (6 RESTANTES)",
+"botaoneutrodesban":"",
 
 "linkdialogdesban":"https://www.apkprofissa.online/p/confira-as-vantagens-do-financiamento.html",
 
