--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 "linkmeuvideo":"https://www.apkprofissa.online/p/confira-as-vantagens-do-financiamento.html",
 
-"codigodesban":"TWVub3MxRGlhSDR4cw",
+"codigodesban":"QnNld1RleHRQb3N0YXM",
 
 "codigovip":"pq",
 
