--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 "codigovip":"pq",
 
-"coderrorvip":"Texto inválido, procure no site!",
+"coderrorvip":"INVÁLIDO, VEJA O VÍDEO, LINK NOS COMENTÁRIOS!",
 
 "titulotrial":"Código vip no site",
 
@@ -64,7 +64,7 @@
 
 "datacomprou":"17/07/2022",
 
-"vencimento":"20/07/2022",
+"vencimento":"21/07/2022",
 
 "botaoneutrodesban":"",
 
