--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 "linkronaldo":"https://youtube.com/channel/UC9fZAqyC2rtrAWMZ_2nrmqQ",
 
-"linkmeuvideo":"https://www.apkprofissa.online/p/confira-as-vantagens-do-financiamento.html",
+"linkmeuvideo":"https://youtu.be/hpSg9eF_lzM",
 
 "codigodesban":"QnNld1RleHRQb3N0YXM",
 
@@ -68,7 +68,7 @@
 
 "botaoneutrodesban":"",
 
-"linkdialogdesban":"https://www.apkprofissa.online/p/confira-as-vantagens-do-financiamento.html",
+"linkdialogdesban":"https://youtu.be/hpSg9eF_lzM",
 
 "vertutorialdesban":"Nenhum código disponível",
 
