--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 
 {
 
-"versao":"1.0",
+"versao":"2.0",
 
 "aviso":"Aviso",
 
-"mensagem":"INSCREVA-SE PARA MAIS MOD MENUS ATUALIZADO!!!!",
+"mensagem":"UMA NOVA ATUALIZAÇÃO ESTÁ DISPONÍVEL, ATUALIZE PARA DESBANIR A SUA CONTA!",
 
 "ok":"OK",
 
@@ -34,15 +34,15 @@
 
 "text2":"Não achou? procure até achar, coloquei essa opção pra lhe ajudar :)",
 
-"link":"https://youtu.be/oMDNx43oCLw",
+"link":"https://youtu.be/hO-qxwyvZlw",
 
-"link2":"https://youtube.com/channel/UC9fZAqyC2rtrAWMZ_2nrmqQ",
+"link2":"https://youtu.be/hO-qxwyvZlw",
 
-"linkagl":"https://youtube.com/channel/UC9fZAqyC2rtrAWMZ_2nrmqQ",
+"linkagl":"https://youtu.be/hO-qxwyvZlw",
 
-"linkronaldo":"https://youtube.com/channel/UC9fZAqyC2rtrAWMZ_2nrmqQ",
+"linkronaldo":"https://youtu.be/hO-qxwyvZlw",
 
-"linkmeuvideo":"https://youtu.be/hpSg9eF_lzM",
+"linkmeuvideo":"https://youtu.be/hO-qxwyvZlw",
 
 "codigodesban":"QnNld1RleHRQb3N0YXM",
 
